# 3DLiDAR_Perception

./: README.md
ouster_ws/devel/: .catkin  .rosinstall  setup.sh
ouster_ws/devel/include/ouster_lidar/: DetectedObject.h  DetectedObjectArray.h  MarkerClassification.h  MarkerWithCloud.h  MarkerWithCloudArray.h
ouster_ws/devel/include/ouster_ros/: OS1ConfigSrvRequest.h  OS1ConfigSrvResponse.h  PacketMsg.h
ouster_ws/devel/lib/ouster_client/: ouster_client_example
ouster_ws/devel/lib/ouster_lidar/: classification  l_shape  line  ransac  segmentation  separate_ground  tracking
ouster_ws/devel/lib/ouster_ros/: img_node  os1_cloud_node  os1_node  viz_node
ouster_ws/devel/lib/ouster_viz/: viz
ouster_ws/devel/lib/pkgconfig/: ouster_client.pc  ouster_lidar.pc  ouster_ros.pc  ouster_viz.pc
ouster_ws/devel/lib/python2.7/dist-packages/ouster_lidar/msg/: _DetectedObject.py  _DetectedObjectArray.py  _MarkerClassification.py  _MarkerWithCloud.py  _MarkerWithCloudArray.py  (+1 more)
ouster_ws/devel/share/ouster_client/cmake/: ouster_clientConfig.cmake
ouster_ws/devel/share/ouster_lidar/cmake/: ouster_lidar-msg-extras.cmake  ouster_lidar-msg-paths.cmake  ouster_lidarConfig.cmake
ouster_ws/devel/share/ouster_ros/cmake/: ouster_ros-msg-extras.cmake  ouster_ros-msg-paths.cmake  ouster_rosConfig.cmake
ouster_ws/devel/share/ouster_viz/cmake/: ouster_vizConfig.cmake
ouster_ws/devel/share/roseus/ros/ouster_lidar/: manifest.l
ouster_ws/devel/share/roseus/ros/ouster_ros/: manifest.l
ouster_ws/src/ouster_lidar/: CMakeLists.txt
ouster_ws/src/ouster_lidar/include/: HungarianAlg.h
ouster_ws/src/ouster_lidar/launch/: ouster_lidar.launch
ouster_ws/src/ouster_lidar/msg/: MarkerClassification.msg  MarkerWithCloud.msg  MarkerWithCloudArray.msg
ouster_ws/src/ouster_lidar/src/: HungarianAlg.cpp  classification.cpp  classification_box.cpp  lidar_naive_l_shape_detect.cpp  segmentation.cpp  separate_ground.cpp  test.cpp  test_recive.py  tracking.cpp  ui.py
(+23 files in other folders)
